# bluemira-template-project

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE copy  README copy.md  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
bm_templ_project/: __init__.py  reactor.py
bm_templ_project/plasma/: __init__.py  builder.py  desinger.py  manager.py
bm_templ_project/tf_coil/: builder.py  designer.py  manager.py
docs/: index.md
docs/reference/: bm_templ_project.reactor.md  template_project.reactor.md
hooks/: post_gen_project.sh
scripts/: install-bluemira.sh  install_bluemira.sh  setup_repo.sh
studies/first/: run.py
template_project/: __init__.py  reactor.py
template_project/plasma/: builder.py  desinger.py  manager.py
template_project/tf_coil/: __init__.py  builder.py  designer.py  manager.py
{{cookiecutter.project_name}}/: LICENSE  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/workflows/: ci.yml
{{cookiecutter.project_name}}/base/: __init__.py  materials.py  params.py  radial_build.py  reactor.py
{{cookiecutter.project_name}}/base/plasma/: __init__.py  builder.py  designer.py  manager.py
{{cookiecutter.project_name}}/base/tf_coil/: __init__.py  builder.py  designer.py  manager.py
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/documentation/: gen_api_ref.py
{{cookiecutter.project_name}}/scripts/: gen_api_ref.py
{{cookiecutter.project_name}}/scripts_base/: gen_api_ref.py  install-bluemira.sh  install_bluemira.sh
{{cookiecutter.project_name}}/studies/first/: reactor.py  run.py
{{cookiecutter.project_name}}/studies/first/config/: config.json
{{cookiecutter.project_name}}/tests/: __init__.py  conftest.py
